[package]
name = "mutex_trait2"
version = "0.3.1"
edition = "2021"
description = "Generic mutex trait"
license = "CC0-1.0"

[dependencies]
embassy-sync = { version = "0.6.0", optional = true }
futures = { version = "0.3.30", optional = true }

[features]
std=["alloc"]
alloc=[]
futures = ["dep:futures","std"]
embassy-sync = ["dep:embassy-sync"]
