[package]
name = "mutex_trait2"
version = "0.4.2"
edition = "2021"
description = "Generic mutex trait"
license = "CC0-1.0"

[dependencies]
embassy-sync = { version = "0.6.0", optional = true }
embedded-io = { version = "0.6.1", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
futures = { version = "0.3.30", optional = true }

[features]
std=["alloc"]
alloc=[]
futures = ["dep:futures","std"]
embassy-sync = ["dep:embassy-sync"]
embedded-io = ["dep:embedded-io"]
embedded-io-async = ["dep:embedded-io-async"]
